Added a twitter List of mutuals feature. Requires [lists][mutuals_list_id] to be filled out

--- a/config-example.ini
+++ b/config-example.ini
@@ -3,3 +3,6 @@ consumer_key = AAAAAAAAAAAAAAAAAAA
 consumer_secret = BBBBBBBBBBBBBBBBBB
 access_token_key = CCCCCCCCCCCCCC
 access_token_secret = DDDDDDDDDDDDDDDDD
+
+[lists]
+mutuals_list_id = 23638849425384462
