Added new config options, fixed a file encoding issue - Users can now define how often script runs, if they even want it to run forever - Users can also define output files - Updated readme and gitignore - small error output fix

--- a/config-example.ini
+++ b/config-example.ini
@@ -5,4 +5,14 @@ access_token_key = CCCCCCCCCCCCCC
 access_token_secret = DDDDDDDDDDDDDDDDD
 
 [lists]
-mutuals_list_id = 23638849425384462
+mutuals_list_id = 1234567890000
+
+[schedule]
+; all values in this section are in seconds
+run_every = 3600
+; probably best not to change this value
+sleep_time = 30
+; Saving raw dictionary
+output_name = saved_following.pk1
+; Text log of users
+log_name = follow_log.log
