Update config-example.json, and README to explain new config options. Should've been part of 7cd00d8

--- a/config-example.json
+++ b/config-example.json
@@ -10,5 +10,10 @@
     "sleep_time": 30,
     "output_name": "saved_following.json",
     "log_name": "follow_log.log"
+  },
+  "tracked_users": {
+    "self": true,
+    "others": [
+    ]
   }
 }
